--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -35,7 +35,11 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
-            </li>          </ul>
+            </li>          
+<li class="nav-item">
+              <a class="nav-link" href="/#">Register</a>
+            </li></ul>
+</ul>
         </div>
       </div>
     </nav>
