--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -2,9 +2,14 @@
 <html>
   <head>
 
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
+
+    <!-- Custom styles for this template -->
+    <%= stylesheet_link_tag "grayscale.min.css" %>
 
 <style>
 hr{
@@ -37,7 +42,29 @@ background-color:black;
 </style>
 <!------ Include the above in your HEAD tag ---------->
 </head>
-<body>
+
+<body id="page-top">
+<header class="masthead">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand" href="/">Renters & Ratings</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/login">Login</a>
+            </li>          
+<li class="nav-item">
+              <a class="nav-link" href="/#">Register</a>
+            </li></ul>
+        </div>
+      </div>
+    </nav>
+
+
 <div align = "center">
 <section class="login-block">
     <div class="container">
@@ -65,6 +92,7 @@ background-color:black;
     <button type="submit" class="btn btn-login float-right">Submit</button>
 
 </div>
+</header>
 </section>
   </body>
 </html>
