Register page/ Nav bars

--- a/app/views/pages/register.html.erb
+++ b/app/views/pages/register.html.erb
@@ -63,34 +63,37 @@ background-color:black;
         </div>
       </div>
     </nav>
-
-
+<div class = "container">
 <div align = "center">
-<section class="login-block">
-    <div class="container">
-	<div class="col-md-6 login-sec"style="margin-bottom:150px"></div>
-		<div class="col-md-6 login-sec">
-		    <h1 class="text-center">Login</h1>
-        <hr>
-		    <form class="login-form">
-  <div class="form-group">
-    <label for="exampleInputEmail1" class="text-uppercase">Username</label>
-    <input type="text" class="form-control" placeholder="">
 
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1" class="text-uppercase">Password</label>
-    <input type="password" class="form-control" placeholder="">
-  </div>
-
-
-    <div class="form-check">
-    <label class="form-check-label">
-      <input type="checkbox" class="form-check-input">
-      <small>Remember Me</small>
-    </label>
-    <button type="submit" class="btn btn-login float-right">Submit</button>
-
+<div id="register" class="animate form">
+				<hr>
+				<hr>
+				<hr>
+				<hr>
+				<h1> Sign up </h1> 
+				<p> 
+					<label for="usernamesignup" class="uname" data-icon="u">Your username</label>
+					<input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
+				</p>
+				<p> 
+					<label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
+					<input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="mysupermail@mail.com"/> 
+				</p>
+				<p> 
+					<label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
+					<input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO"/>
+				</p>
+				<p> 
+					<label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
+					<input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. X8df!90EO"/>
+				</p>
+				<p class="signin button"> 
+					<input type="submit" value="Sign up"/> 
+				</p>
+							</form>
+		</div>
+</div>
 </div>
 </header>
 </section>
