--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,7 +24,7 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="/">Renters & Ratings</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
               <a class="nav-link" href="/login">Login</a>
             </li>          
 <li class="nav-item">
-              <a class="nav-link" href="/#">Register</a>
+              <a class="nav-link" href="/register">Register</a>
             </li></ul>
 </ul>
         </div>
