log in through devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
+<%= javascript_include_tag "application" %>
 <html>
   <head>
     <title>Renters & Ratings</title>
     <%= csrf_meta_tags %>
   </head>
+
+  <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand" href="/">Renters & Ratings</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+          <% if user_signed_in? %>
+          <li class="nav-item">
+            Logged in as <strong><%= current_user.email %></strong>.
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => "nav-link" %>
+          </li>
+          <li class ="nav-item">
+          <%= link_to "Log Out", destroy_user_session_path, method: 'delete', :class => "nav-link" %>
+          </li>
+          <% else %>
+          <li class ="nav-item">
+          <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
+          </li>
+          <li class ="nav-item">
+          <%= link_to "Login", new_user_session_path, :class => 'nav-link' %>
+          </li>
+          <% end %>
+          <% if current_user.try(:admin?) %>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin">Admin</a>
+            </li>
+          <% end %>
 
   <body>
     <%= yield %>
