--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,6 +24,8 @@
   <body id="page-top">
 
     <!-- Navigation -->
+    
+<!--
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="/">Renters & Ratings</a>
@@ -33,13 +35,38 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
+          <% if user_signed_in? %>
+          <li class="nav-item">
+            Logged in as <strong><%= current_user.email %></strong>.
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => "nav-link" %>
+          </li>
+          <li class ="nav-item">
+          <%= link_to "Log Out", destroy_user_session_path, method: 'delete', :class => "nav-link" %>
+          </li>
+          <% else %>
+          <li class ="nav-item">
+          <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
+          </li>
+          <li class ="nav-item">
+          <%= link_to "Login", new_user_session_path, :class => 'nav-link' %>
+          </li>
+          <% end %>
+          <% if current_user.try(:admin?) %>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin">Admin</a>
+            </li>
+          <% end %>
+
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
             </li>          
-<li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="/register">Register</a>
             </li></ul>
 </ul>
+-->
         </div>
       </div>
     </nav>
