--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,15 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<body id="page-top">
+<header class="masthead">
+
+<div align = "center">
+<section class="login-block">
+    <div class="container">
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+
+<h1>Edit <%= resource_name.to_s.humanize %></h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -17,7 +28,6 @@
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
 
@@ -31,13 +41,13 @@
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
+<br/>
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
+</section> 
+</div>
+</header>
+</body>
