--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,109 +1,47 @@
-<!DOCTYPE html>
-<html>
-  <head>
-
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-
-
-    <!-- Custom styles for this template -->
-    <%= stylesheet_link_tag "grayscale.min.css" %>
-
-<style>
-hr{
-  color:white;
-}
-button{
-
-  color:black;
-  background-color:white;
-}
-label
-{
-  color:white;
-}
-
-h2
-{
-  color:white;
-}
-
-body{
-background-color:black;
-}
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg .tg-0lax{text-align:left;vertical-align:top}
-.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
-
-</style>
-<!------ Include the above in your HEAD tag ---------->
-</head>
-
 <body id="page-top">
 <header class="masthead">
-  <!--
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand" href="/">Renters & Ratings</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
-            </li>          
-<li class="nav-item">
-              <a class="nav-link" href="/register">Register</a>
-            </li></ul>
-        </div>
-      </div>
-    </nav>
-  -->
+
 <div align = "center">
 <section class="login-block">
     <div class="container">
-  <div class="col-md-6 login-sec"style="margin-bottom:150px"></div>
-    <div class="col-md-6 login-sec">
-        <h1 class="text-center">Sign Up</h1>
-        
-        <form class="login-form">
-  <div class="form-group">
-    <label for="exampleInputEmail1" class="text-uppercase">Username</label>
-    <input type="text" class="form-control" placeholder="">
+      <br/>
+      <br/>
+      <br/>
+      <br/>
 
+      <h1>Sign up</h1>
+
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
+
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="form-group">
-    <label for="exampleInputEmail1" class="text-uppercase">Email</label>
-    <input type="text" class="form-control" placeholder="">
-
+  <div class="field">
+    <%= f.label :password %>
+    <% if @minimum_password_length %>
+    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <% end %><br />
+    <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
-  <div class="form-group">
-    <label for="exampleInputPassword1" class="text-uppercase">Password</label>
-    <input type="password" class="form-control" placeholder="">
+  <div class="field">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="form-group">
-    <label for="exampleInputPassword1" class="text-uppercase">Confirm Password</label>
-    <input type="password" class="form-control" placeholder="">
+<br/>
+  <div class="actions">
+    <%= f.submit "Sign up" %>
   </div>
+<% end %>
 
-
-
-    <div class="form-check"> <button type="submit" class="btn btn-login float-center">Submit</button>
+<%= render "devise/shared/links" %>
 
 </div>
+</section>
 </div>
 </header>
-</section>
-  </body>
-</html>
-
-
+</body>
