--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <%= javascript_include_tag "application" %>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
+
+    <!-- Custom styles for this template -->
+    <%= stylesheet_link_tag "grayscale.min.css" %>
 <html>
   <head>
     <title>Renters & Ratings</title>
@@ -10,6 +18,9 @@
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="/">Renters & Ratings</a>
+        <% if user_signed_in? %>
+        <a class="navbar-brand">Logged in as <strong><%= current_user.email %></strong></a>
+          <% end %>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -17,9 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
-          <li class="nav-item">
-            Logged in as <strong><%= current_user.email %></strong>.
-          </li>
+         
           <li class="nav-item">
             <%= link_to 'Edit profile', edit_user_registration_path, :class => "nav-link" %>
           </li>
@@ -39,6 +48,9 @@
               <a class="nav-link" href="/admin">Admin</a>
             </li>
           <% end %>
+                  </div>
+      </div>
+    </nav>
 
   <body>
     <%= yield %>
