--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <div class="container">
         <a class="navbar-brand" href="/">Renters & Ratings</a>
         <% if user_signed_in? %>
-        <a class="navbar-brand">Logged in as <strong><%= current_user.email %></strong></a>
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a class="navbar-brand">Logged in as <%= current_user.email %></a>
           <% end %>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -30,18 +30,19 @@
           <% if user_signed_in? %>
          
           <li class="nav-item">
-            <%= link_to 'Edit profile', edit_user_registration_path, :class => "nav-link" %>
+            <%= link_to 'Profile', edit_user_registration_path, :class => "nav-link" %>
           </li>
           <li class ="nav-item">
           <%= link_to "Log Out", destroy_user_session_path, method: 'delete', :class => "nav-link" %>
-          </li>
+          </li
+
           <% else %>
           <li class ="nav-item">
           <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
           </li>
           <li class ="nav-item">
           <%= link_to "Login", new_user_session_path, :class => 'nav-link' %>
-          </li>
+          </li>		
           <% end %>
           <% if current_user.try(:admin?) %>
             <li class="nav-item">
