--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,6 +25,11 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
+    <div class="field">
+    <%= f.label :image %><br />
+    <%= f.file_field :user_picture %>
+  </div>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -33,6 +38,16 @@
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
+
+<!-- if we want to change edit field based on renter or tenant
+  <% if !current_user.renter.blank? %>
+    renter stuff
+  <% end %>
+
+  <% if !current_user.tenant.blank? %>
+    tenant stuff
+  <% end %>
+-->
 
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
