--- a/app/views/tenants/edit.html.erb
+++ b/app/views/tenants/edit.html.erb
@@ -1,6 +1,36 @@
+<html>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
+
+    <!-- Custom styles for this template -->
+    <%= stylesheet_link_tag "grayscale.min.css" %>
+
+<style>
+    .green {
+    position: absolute;
+    padding-right: 25%;
+
+}
+</style>
+<body id="page-top">
+
+<header class="masthead">
+
+
+<div align = "center">
+<br>
+<br>
+<br>
 <h1>Editing Tenant</h1>
 
 <%= render 'form', tenant: @tenant %>
 
 <%= link_to 'Show', @tenant %> |
 <%= link_to 'Back', tenants_path %>
+</body>
+</header>
+</div>
+</html>
