--- a/app/views/renters/index.html.erb
+++ b/app/views/renters/index.html.erb
@@ -1,17 +1,56 @@
+<style>
+hr{
+  color:white;
+}
+button{
+
+  color:black;
+  background-color:white;
+}
+label
+{
+  color:white;
+}
+
+h2
+{
+  color:white;
+}
+
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+</style>
+<body id="page-top">
+
+<header class="masthead">
 <p id="notice"><%= notice %></p>
 
 <h1>Renters</h1>
 
+
 <table>
   <thead>
+    <div class="container bootstrap snippet">
+        <div class="row">
+      		<div class="col-sm-10">
     <tr>
+      <div class="row">
+        <div class="col-sm-10">
       <th>Apartmentid</th>
       <th>Firstname</th>
       <th>Lastname</th>
       <th>Leasing</th>
       <th colspan="3"></th>
     </tr>
+  </div>
+</div>
+</div>
+
   </thead>
+
 
   <tbody>
     <% @renters.each do |renter| %>
@@ -31,3 +70,6 @@
 <br>
 
 <%= link_to 'New Renter', new_renter_path %>
+<body>
+
+  <header>
