--- a/app/views/apartment_complexes/show.html.erb
+++ b/app/views/apartment_complexes/show.html.erb
@@ -1,3 +1,38 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
+
+    <!-- Custom styles for this template -->
+    <%= stylesheet_link_tag "grayscale.min.css" %>
+<style>
+table {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td,  th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2;}
+
+tr:hover {background-color: #ddd;}
+
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+}</style>
+  <head>
+    <title>Renters & Ratings</title>
+    <%= csrf_meta_tags %>
+  </head>
 <h1><%= @apartment_complex.apartment_complex_name %> </h1>
 <table>
   <tbody>
