styling show changes

--- a/app/views/apartment_complexes/show.html.erb
+++ b/app/views/apartment_complexes/show.html.erb
@@ -33,6 +33,12 @@ th {
     <title>Renters & Ratings</title>
     <%= csrf_meta_tags %>
   </head>
+  <body id="page-top">
+  <header class="masthead">
+<br>
+<br>
+<br>
+<br>
 <h1><%= @apartment_complex.apartment_complex_name %> </h1>
 <table>
   <tbody>
@@ -48,3 +54,5 @@ th {
     <% end %>
   </tbody>
 </table>
+</body>
+</header>
