--- a/app/views/renters/show.html.erb
+++ b/app/views/renters/show.html.erb
@@ -66,6 +66,8 @@ h2
           <%= image_tag(@renter.user.user_picture.url(:original), :size => "200x200") %>
         <%end if %>
       </div></hr><br>
+      <%= link_to 'Edit', edit_renter_path(@renter) %> |
+      <%= link_to 'Back', renters_path %>
 
 
 
@@ -83,35 +85,35 @@ h2
           <div class="tab-content">
             <div class="tab-pane active" id="home">
                 <hr>
-                  <form class="form" action="##" method="post" id="registrationForm">
+
                       <div class="form-group">
 
                           <div class="col-xs-6">
-                              <label for="full_name"><u><h4><%= @renter.first_name %> <%= @renter.last_name %></h4></u></label>
+                              <label for="full_name"><h4>Name: <%= @renter.first_name %> <%= @renter.last_name %></h4></label>
 
                           </div>
                       </div>
                       <div class="form-group">
 
                           <div class="col-xs-6">
-                            <label for="Address"><u><h4><%= @renter.apartment.apartment_complex.address %></h4></u></label>
+                            <label for="Address"><h4>Address: <%= @renter.apartment.apartment_complex.address %></h4></label>
                                                         </div>
                       </div>
 
                       <div class="form-group">
 
                           <div class="col-xs-6">
-                              <label for="Rating"><u><h4>Current Rating</h4></u></label>
+                              <label for="Rating"><h4>Current Rating: </h4></label>
                                                        </div>
                       </div>
 
                       <div class="form-group">
                           <div class="col-xs-6">
-                             <label for="mobile"><u><h4>User Reviews</h4></u></label>
+                             <label for="mobile"><h4>User Reviews: </h4></label>
                                                         </div>
                       </div>
 
-              	</form>
+
               </div>
 
               </div><!--/tab-pane-->
@@ -124,7 +126,3 @@ h2
 
   </body>
 </html>
-
-
-<%= link_to 'Edit', edit_renter_path(@renter) %> |
-<%= link_to 'Back', renters_path %>
