--- a/app/views/renters/index.html.erb
+++ b/app/views/renters/index.html.erb
@@ -17,11 +17,40 @@ h2
   color:white;
 }
 
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg .tg-0lax{text-align:left;vertical-align:top}
-.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+.pad{
+  padding-left: 5%;
+
+}
+table {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td,  th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2;}
+
+tr:hover {background-color: #ddd;}
+
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+}
+
+    .green {
+    position: absolute;
+    padding-right: 25%;
+
+
+
+}
 </style>
 <body id="page-top">
 
@@ -40,11 +69,9 @@ h2
       <div class="row">
         <div class="col-sm-10">
       <th>Apartmentid</th>
-      <th>Firstname</th>
-      <th>Lastname</th>
-      <th>Leasing</th>
-      <th colspan="3"></th>
-    </tr>
+      <th>Full Name</th>      
+<th>Leasing</th>
+          </tr>
   </div>
 </div>
 </div>
@@ -54,15 +81,13 @@ h2
 
   <tbody>
     <% @renters.each do |renter| %>
-      <tr>
+        <tr>
         <td><%= renter.apartment_id %></td>
-        <td><%= renter.first_name %></td>
-        <td><%= renter.last_name %></td>
-        <td><%= renter.leasing %></td>
-        <td><%= link_to 'Show', renter %></td>
-        <td><%= link_to 'Edit', edit_renter_path(renter) %></td>
-        <td><%= link_to 'Destroy', renter, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        
+<td><%= link_to "#{renter.first_name} #{renter.last_name}", renter_path(renter.id) %></td>
+
+                <td><%= renter.leasing %></td>
+        </tr>
     <% end %>
   </tbody>
 </table>
