--- a/app/views/renters/index.html.erb
+++ b/app/views/renters/index.html.erb
@@ -1,3 +1,5 @@
+<html>
+<%= stylesheet_link_tag "grayscale.css" %>
 <style>
 hr{
   color:white;
@@ -95,6 +97,7 @@ th {
 <br>
 
 <%= link_to 'New Renter', new_renter_path %>
-<body>
+</body>
 
-  <header>
+  </header>
+</html>
