--- a/app/views/apartment_complexes/show.html.erb
+++ b/app/views/apartment_complexes/show.html.erb
@@ -5,7 +5,7 @@
 
 
     <!-- Custom styles for this template -->
-    <%= stylesheet_link_tag "grayscale.min.css" %>
+    <%= stylesheet_link_tag "grayscale.css" %>
 <style>
 table {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
