--- a/app/views/renters/edit.html.erb
+++ b/app/views/renters/edit.html.erb
@@ -9,7 +9,7 @@
 
 
     <!-- Custom styles for this template -->
-    <%= stylesheet_link_tag "grayscale.min.css" %>
+    <%= stylesheet_link_tag "grayscale.css" %>
 
 <style>
 .center {
@@ -69,7 +69,6 @@ h2
 <%= link_to 'Back', renters_path %>
 </center>
 
-</header>
 </body>
-
+</header>
 </html>
