--- a/app/views/tenants/edit.html.erb
+++ b/app/views/tenants/edit.html.erb
@@ -6,7 +6,7 @@
 
 
     <!-- Custom styles for this template -->
-    <%= stylesheet_link_tag "grayscale.min.css" %>
+    <%= stylesheet_link_tag "grayscale.css" %>
 
 <style>
     .green {
