--- a/app/views/renters/show.html.erb
+++ b/app/views/renters/show.html.erb
@@ -95,15 +95,9 @@ th {
         <% if !@renter.user.user_picture.blank? %>
           <%= image_tag(@renter.user.user_picture.url(:original), :size => "200x200") %>
         <%end if %>
-      </div></hr><br>
+</div><br>
 
 
-
-          <div class="panel panel-default">
-                        <div class="panel-body">
-            	<i class="fa fa-facebook fa-2x"></i> <i class="fa fa-github fa-2x"></i> <i class="fa fa-twitter fa-2x"></i> <i class="fa fa-pinterest fa-2x"></i> <i class="fa fa-google-plus fa-2x"></i>
-            </div>
-          </div>
 
         </div><!--/col-3-->
     	<div class="col-sm-9">
